--- a/Pinterest/Base.lproj/Main.storyboard
+++ b/Pinterest/Base.lproj/Main.storyboard
@@ -122,8 +122,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image-11" translatesAutoresizingMaskIntoConstraints="NO" id="SuD-Lc-VOT">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image-11" translatesAutoresizingMaskIntoConstraints="NO" id="SuD-Lc-VOT">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="aU5-02-Wih" appends="YES" id="MnJ-aL-R1A"/>
+                                </connections>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="KRD-UQ-UUO"/>
@@ -141,6 +145,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uxb-bl-27d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="aU5-02-Wih">
+                    <connections>
+                        <action selector="handlePinch:" destination="n3f-xd-JdE" id="aHf-tl-Jdn"/>
+                    </connections>
+                </pinchGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1759" y="119"/>
         </scene>
